<resources>
    <string name="app_name">INVENTARIO R7</string>
    <string name="inventario_red_7">INVENTARIO RED 7</string>
    <string name="indique_si_es_entrada_o_salida">Indique si es Entrada o Salida</string>
    <string name="entrada">Entrada</string>
    <string name="salida">Salida</string>
    <string name="seleccion">Selección</string>
    <string name="folio">Folio / Nombre de proyecto / Tarea asignada</string>
    <string name="folio_proyecto_tarea">Borre para escribir aquí</string>
    <string name="ingresar">INGRESAR</string>
    <string name="tipo_de_material">Indique el tipo de material</string>

    <string name="radio_button_cable">Cable</string>
    <string name="radio_button_conectores">Conectores</string>
    <string name="radio_button_retenida">Retenida</string>
    <string name="radio_button_montaje">Montaje</string>
    <string name="radio_button_herraje">Herraje</string>
    <string name="radio_button_torre">Torre</string>
    <string name="radio_button_anclaje">Anclaje</string>
    <string name="radio_button_consumibles">Consumibles</string>
    <string name="radio_button_tornilleria">Tornilleria</string>
    <string name="radio_button_router">Router</string>
    <string name="radio_button_radio">Radio</string>
    <string name="radio_button_otro">Otro</string>
    <string name="button_seleccion_de_material">Seleccionar</string>
    <string name="tipo_de_cable">Indique tipo de cable</string>
    <string name="coaxial">Coaxial</string>
    <string name="utp">UTP</string>
    <string name="button_select">Seleccionar</string>
    <string name="marca_de_cable">Seleccione la marca del cable</string>
    <string name="send_marca_cable">Enviar</string>
    <string name="radiobutton_otro">Otro</string>
    <string name="otro_cable">Especifique tipo de cable</string>
    <string name="buttonTipoCable">Enviar tipo de cable</string>
    <string name="indique_tipo_de_conector">Indique Tipo de Conector</string>
    <string name="conector_coaxial">Coaxial</string>
    <string name="conector_UTP">UTP</string>
    <string name="otro_conector">Otro</string>
    <string name="button_select_conector">Seleccionar conector</string>
    <string name="radio_button_marca1">Marca 1 pendiente</string>
    <string name="radio_button_marca2">Marca 2 pendiente</string>
    <string name="textview_Marca_de_conector">Seleccione la marca de conector</string>
    <string name="radiobutton_marca_conector_1">Marca conector 1 pendiente</string>
    <string name="radiobutton_marca_conector_2">Marca conector 2 pendiente</string>
    <string name="button_select_marca_conector">enviar</string>
    <string name="indique_conector">Especifique tipo de Conector</string>
    <string name="button_select_otro_conector">enviar</string>
    <string name="textview_tipo_retenida">Seleccione Tipo de Retenida</string>
    <string name="radiobutton_retenida3_16">Retenida 3/16</string>
    <string name="radiobutton_retenida_otro">Otro</string>
    <string name="buttonSelectRetenida">Seleccionar</string>
    <string name="textview_otra_retenida">Especifique tipo de retenida</string>
    <string name="button_tipo_retenida">Enviar</string>
    <string name="textview_marca_retenida">Indique una marca</string>
    <string name="radiobutton_marca_retenida_1">Marca de retenida 1</string>
    <string name="radiobutton_marca_retenida_2">Marca de retenida 2</string>
    <string name="radiobutton_marca_retenida_3">Marca de retenida 3</string>
    <string name="button_enviar_marca_retenida">enviar</string>
    <string name="textview_tipo_de_montaje">Indique tipo de Montaje</string>
    <string name="radiobutton_montaje_mastil">Mastil</string>
    <string name="radiobutton_montaje_brazo">Brazo</string>
    <string name="radiobutton_montaje_otro">Otro</string>
    <string name="button_select_montaje">Seleccionar</string>
    <string name="textview_otro_montaje">Especifique tipo de montaje</string>
    <string name="button_tipo_de_cable">Seleccionar</string>
    <string name="textview_marca_montaje">Seleccione marca de montaje</string>
    <string name="radiobutton_marca_montaje1">Marca montaje 1 pendiente</string>
    <string name="radiobutton_marca_montaje2">Marca montaje 2 pendiente</string>
    <string name="button_marca_montaje">Seleccionar</string>
    <string name="textview_tipo_de_herraje">Indique tipo de herraje</string>
    <string name="radiobutton_herraje_ohmega">Ohmegas pared</string>
    <string name="radiobutton_herraje_perro">Perro 3/16</string>
    <string name="radiobutton_otro_herraje">Otro</string>
    <string name="button_select_herraje">Seleccionar</string>
    <string name="textview_otro_herrahe">Especifique el tipo de herraje</string>
    <string name="button_tipo_herraje">Seleccionar</string>
    <string name="textview_marca_de_herraje">Seleccione marca de herraje</string>
    <string name="radiobutton_marca_herrahe1">Marca 1 pendiente</string>
    <string name="radiobuttonHerrajeMarca2">Marca 2 pendiente</string>
    <string name="button_send_marca_cable">Enviar</string>
    <string name="textview_tipo_de_torre">Indique tipo de torre</string>
    <string name="radiobutton_tramo_torre">Tramo torre</string>
    <string name="radiobutton_torre_copete">Copete</string>
    <string name="radiobutton_torre_base_torre">Base torre</string>
    <string name="radiobutton_torre_otro">Otro</string>
    <string name="button_select_tipo_torre">Seleccionar</string>
    <string name="textview_otra_torre">Especifique tipo de torre</string>
    <string name="button_select_otra_torre">Seleccionar</string>
    <string name="textview_marca_de_torre">Indique marca de torre</string>
    <string name="radiobutton_torre_marca1">Torre marca 1 pendiente</string>
    <string name="radiobutton_marca_torre2">Torre marca 2 pendiente</string>
    <string name="button_select_marca_torre">Enviar</string>
    <string name="textview_tipo_de_anclaje">Indique tipo de anclaje</string>
    <string name="radiobutton_anclaje_torre_o_mastil">Torre o mastil</string>
    <string name="radiobutton_anclaje_angulos">Ángulos</string>
    <string name="radiobutton_anclaje_tensor_o_gancho">Tensor o gancho 3/8</string>
    <string name="radiobutton_tensor_gancho_3_6">Tenson o gancho 3/6</string>
    <string name="radiobutton_anclaje_bandola">Bandola unión</string>
    <string name="radiobutton_anclaje_otro">Otro</string>
    <string name="button_select_tipo_de_anclaje">Seleccionar</string>
    <string name="textview_otro_anclaje">Especifique tipo de anclaje</string>
    <string name="button_otro_anclaje">Enviar</string>
    <string name="textview_marca_anclaje">Indique marca de anclaje</string>
    <string name="radiobutton_marca_anclaje_1">Marca 1 pendiente</string>
    <string name="radiobutton_marca_anclaje_2">Marca 2 pendiente</string>
    <string name="button_select_marcaDeAnclaje">Enviar</string>
    <string name="textview_tipo_consumible">Indique tipo de consumible</string>
    <string name="radiobutton_cichos">Cinchos</string>
    <string name="radiobuttonGrapas">Grapas</string>
    <string name="radiobutton_silicon">Silicón</string>
    <string name="radiobutton_chupon">Chupón</string>
    <string name="radiobutton_reflejante">Reflejante</string>
    <string name="radiobutton_consumible_otro">Otro</string>
    <string name="button_Select_tipo_consumible">Seleccionar</string>
    <string name="textview_otro_consumible">Especifique tipo de consumible</string>
    <string name="button_otro_consumible">Enviar</string>
    <string name="textviewMarcaDeConsumible">Indique marca de consumible</string>
    <string name="radiobutton_marca_consumible1">Marca 1 pendiente</string>
    <string name="radiobutton_marca_consumible2">Marca 2 pendiente</string>
    <string name="buttonMarcaConsumible">Enviar</string>
    <string name="textview_tipo_tornilleria">Indique el tipo de tornilleria</string>
    <string name="radiobutton_madera">Madera</string>
    <string name="radiobutton_lamina">Lámina</string>
    <string name="radiobutton_concreto">Concreto</string>
    <string name="radiobutton_tornillo_expansivo">Expansivo</string>
    <string name="radiobutton_tornillo_otro">Otro</string>
    <string name="button_select_tornillo">Seleccionar</string>
    <string name="textview_otro_tornillo">Especifique tipo de tornillo</string>
    <string name="button_otro_tornillo">enviar</string>
    <string name="textview_marca_tornillo">Indique marca de tornillo</string>
    <string name="radiobutton__marca_tornillo_1">Marca tornillo 1 pendiente</string>
    <string name="radiobutton_marca_tornillo2">Marca tornillo 2 pendiente</string>
    <string name="textview_tipo_de_router">Indique tipo de Router</string>
    <string name="radiobutton_router_hAP">hAP</string>
    <string name="radiobutton_router_RB1100">RB1100AHx4</string>
    <string name="radiobutton_router_re2011">RB2011UiAS</string>
    <string name="radiobutton_router_rb30aa">RB30AAUiAS</string>
    <string name="radiobutton_router_rb4011">RB4011iGs</string>
    <string name="radiobutton_router_hap_ac">hAP ac lite</string>
    <string name="radiobutton_router_rb95">RB95Ui</string>
    <string name="radiobutton_router_rb951g">RB951G</string>
    <string name="radiobutton_router_rb5009">RB5009</string>
    <string name="radiobutton_router_otro">Otro</string>
    <string name="button_send_tipo_router">enviar</string>

</resources>