<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TipoDeRouter">

    <TextView
        android:id="@+id/textView_tipo_router"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/textview_tipo_de_router"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup20"
        android:layout_width="275dp"
        android:layout_height="494dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_tipo_router">

        <RadioButton
            android:id="@+id/radioButtonRouter_hAP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_router_hAP" />

        <RadioButton
            android:id="@+id/radioButtonRouter_RB1100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_router_RB1100" />

        <RadioButton
            android:id="@+id/radioButtonRouter_RB2011"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_router_re2011" />

        <RadioButton
            android:id="@+id/radioButtonRouter_30AA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_router_rb30aa" />

        <RadioButton
            android:id="@+id/radioButtonRouter_4011"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_router_rb4011" />

        <RadioButton
            android:id="@+id/radioButtonRouter_hAP_ac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_router_hap_ac" />

        <RadioButton
            android:id="@+id/radioButtonRouter_RB95"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_router_rb95" />

        <RadioButton
            android:id="@+id/radioButtonRouter_RB951G"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_router_rb951g" />

        <RadioButton
            android:id="@+id/radioButtonRouter_RB5009"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_router_rb5009" />

        <RadioButton
            android:id="@+id/radioButtonRouter_otro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_router_otro" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSendTipoRouter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button_send_tipo_router"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup20" />
</androidx.constraintlayout.widget.ConstraintLayout>